--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </tr>
               <tr>
                 <td>
-                  <a href="www.linkedin.com/in/linda-zwane-b3594795">Linda Zwane</a>
+                  <a href="https://www.linkedin.com/in/lindazwane/">Linda Zwane</a>
                 </td>
                 <td>
                   C#, Java, C++, PHP, SQL, Node.js, XML, JSON, Ajax and Assembly
